test tabs w/ shared service

--- a/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
@@ -1,5 +1,6 @@
  <body class="container" (touchstart)="swipe($event, 'start')" (touchend)="swipe($event, 'end')">
   <br>
+  <app-test-tabs></app-test-tabs>
   <div class="tab-header-list">
     <tabset class="admin-tabset" #adminTabs>
       <tab heading="Sessions">
