--- a/Hammond-SPA/src/app/admin/assignment-edit/assignment-edit.component.html
+++ b/Hammond-SPA/src/app/admin/assignment-edit/assignment-edit.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <i class="fa fa-arrow-circle-left"></i>
+  <i class="fa fa-arrow-circle-left" (click)="backup()"></i>
   <p>Assignment Registration</p>
 
   <form [formGroup]="editForm" (ngSubmit)="edit()">
