--- a/Hammond-SPA/src/app/mentor/mentor-my-students/mentor-my-students.component.html
+++ b/Hammond-SPA/src/app/mentor/mentor-my-students/mentor-my-students.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <i id="back-arrow" class="fa fa-arrow-circle-left" [routerLink]="['/mentor']"></i>
+    <i id="back-arrow" class="fa fa-arrow-circle-left" (click)="backup()"></i>
     <ng-container class="container">
         <div *ngFor="let user of usergroup">
             <app-user-item *ngIf="currentUserId != user.user.id" [user]="user.user"></app-user-item>
