--- a/Hammond-SPA/src/app/admin/registrations/session-registration/session-registration.component.html
+++ b/Hammond-SPA/src/app/admin/registrations/session-registration/session-registration.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <i class="fa fa-arrow-circle-left" [routerLink]="['/admin']"></i>
+  <i class="fa fa-arrow-circle-left" (click)="backup()"></i>
   <form (change)="loadAssignments()" class="form-inline" #form="ngForm" (ngSubmit)="loadAssignments()" novalidate>
     <div class="form-group px-2">
       <label for="gradeLevel">Grade: </label>
