added ACT modal scores

--- a/Hammond-SPA/src/app/users/user-profile/user-profile.component.css
+++ b/Hammond-SPA/src/app/users/user-profile/user-profile.component.css
@@ -33,6 +33,10 @@
     cursor: pointer;
 }
 
+.act-modal-link {
+    cursor: pointer;
+}
+
 /* #stud-level-edit-link {
   margin-left: 15px;
   font-size: 15px;
