--- a/Hammond-SPA/src/app/landingpages/student-landing/student-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/student-landing/student-landing.component.html
@@ -1,7 +1,7 @@
 <body class="container" (touchstart)="swipe($event, 'start')" (touchend)="swipe($event, 'end')">
   <br>
   <ng-container class="container">
-    <app-student-tabs></app-student-tabs>
+    <app-student-tabs [swiped]="swiped"></app-student-tabs>
     <div *ngIf="setTab==='tab1'">
       <br>
 
