--- a/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
@@ -1,6 +1,6 @@
  <body class="container" (touchstart)="swipe($event, 'start')" (touchend)="swipe($event, 'end')">
   <br>
-  <app-admin-tabs></app-admin-tabs>
+  <app-admin-tabs [swiped]="swiped"></app-admin-tabs>
   <div>
     <div *ngIf="setTab==='tab1'">
       <app-sessions-tab></app-sessions-tab>
