--- a/Hammond-SPA/src/app/admin/groups-list/groups-list.component.html
+++ b/Hammond-SPA/src/app/admin/groups-list/groups-list.component.html
@@ -32,10 +32,41 @@
                     <i (click)="removeMember(ug)" class="fa fa-minus-circle"></i>
                   </li>
             </ul>
-            <button class="btn btn-primary" (click)="disbandGroup(group.id)">Disband Group</button>
+            <ng-template #template>
+              <div class="modal-header">
+                <h4 class="modal-title pull-left">
+                  Add A Student:
+                </h4>
+                <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <ul *ngFor="let user of students">
+                  <li>{{user.lastName}}, {{user.firstName}}</li>
+                </ul>
+              </div>
+              <div class="d-flex justify-content-center">
+                <pagination [boundaryLinks]="true"
+                            [totalItems]="studentPagination.totalItems"
+                            [itemsPerPage]="studentPagination.itemsPerPage"
+                            [(ngModel)]="studentPagination.currentPage"
+                            (pageChanged)="studentPageChanged($event, group.userGroups[0].user.studentLevel)"
+                        previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;"> 
+                </pagination>
+              </div>
+            </ng-template>
+            <div class="form-group text-center">
+              <button (click)="openModal(template, group.userGroups[0].user.studentLevel)" class="btn btn-success">Add Student</button>
+              <button class="btn btn-primary">Add Mentor</button>
+            </div>
+            
+            <button class="btn btn-danger" (click)="disbandGroup(group.id)">Disband Group</button>
         </div>
         
     </div>
+    
+    
 
     <div class="d-flex justify-content-center">
       <pagination [boundaryLinks]="true"
