--- a/Hammond-SPA/src/app/Tabs/admin-tabs/admin-tabs.component.html
+++ b/Hammond-SPA/src/app/Tabs/admin-tabs/admin-tabs.component.html
@@ -54,36 +54,36 @@
     class="admin-tab-abrv"
     [ngClass]="adminTabObjSel.tab2=='active' ? 'admin-tab-abrv-active' : ''"
     (click)="clickATab($event)">
-    Evnt
+    <i class="fa fa-calendar"></i>
   </div>
   <div id="tab3"
     class="admin-tab-abrv"  
     [ngClass]="adminTabObjSel.tab3=='active' ? 'admin-tab-abrv-active' : ''"
     (click)="clickATab($event)">
-    Asgn
+    <i class="fa fa-pencil"></i>
   </div>
   <div id="tab4"
     class="admin-tab-abrv"  
     [ngClass]="adminTabObjSel.tab4=='active' ? 'admin-tab-abrv-active' : ''"
     (click)="clickATab($event)">
-    Stud
+    S. <i class="fa fa-user"></i>
   </div>
   <div id="tab5"
     class="admin-tab-abrv"  
     [ngClass]="adminTabObjSel.tab5=='active' ? 'admin-tab-abrv-active' : ''"
     (click)="clickATab($event)">
-    Vltr
+    V. <i class="fa fa-user"></i>
   </div>
   <div id="tab6"
     class="admin-tab-abrv"  
     [ngClass]="adminTabObjSel.tab6=='active' ? 'admin-tab-abrv-active' : ''"
     (click)="clickATab($event)">
-    Grps
+    <i class="fa fa-users"></i>
   </div>
   <div id="tab7"
     class="admin-tab-abrv"  
     [ngClass]="adminTabObjSel.tab7=='active' ? 'admin-tab-abrv-active' : ''"
     (click)="clickATab($event)">
-    Mesg
+    <i class="fa fa-envelope"></i>
   </div>
 </div>
