--- a/Hammond-SPA/src/app/admin/registrations/session-registration/session-registration.component.html
+++ b/Hammond-SPA/src/app/admin/registrations/session-registration/session-registration.component.html
@@ -20,7 +20,7 @@
       <h4>&nbsp;</h4>
       <ul class="" style="list-style-type: none;">
         <div class="card">
-          <h4 *ngIf="isSession === 0">Add Assignmenets</h4>
+          <h4 *ngIf="isSession === 0">Add Assignments</h4>
           <div class="card-body" *ngFor="let assignment of assignmentsInSession">
             <li (click)="ungroupAssignment(assignment)" *ngIf="assignment.grouped">
               {{assignment.title}}
